src/style.css
@import 'remixicon/fonts/remixicon.css';

@tailwind base;
@tailwind components;
@tailwind utilities;


.cm-editor {
  height: 100% !important;
  @apply p-2
}

.cm-gutter {
  z-index: 5 !important;
  background-color: white;
}


.cm-gutters {
  border: none !important;
}

.cm-gutterElement {
  @apply text-sm text-zinc-800
}

.cm-focused {
  outline: none !important;
}

.rdg-cell {
  @apply border
}

.rdg-row-even {
  @apply bg-zinc-50
}

.rdg-cell-resizable::after {
  @apply bg-zinc-100
}

.gutter {
  position: relative;
  z-index: 20;
  background-color: #eee;
  background-repeat: no-repeat;
  background-position: 50%;
  transition: background-color 0.5s
}

.gutter:hover {
  background-color: rgb(75, 143, 225);
  background-repeat: no-repeat;
  background-position: 50%;
}

.gutter.gutter-vertical {
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
  cursor: row-resize;
}

